# EncryptDecrypt

app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
